# luffy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.py
.github/workflows/: ci.yml
include/luffy/: ansi.h  core.h  graphics.h  log.h  types.h
include/luffy/types/: alias.h  option.h  result.h  string.h
libs/glad/include/glad/: gl.h
src/: ansi.c  log.c  string.c
tests/: CMakeLists.txt
tests/types/: test_option.c  test_result.c  test_string.c
